Rebrand project from VaultIQ to AskMyVideo
- Update all project names and branding throughout codebase
- README.md: Update main project branding and descriptions
- Django settings, URLs, and Celery config: Replace VaultIQ with AskMyVideo
- HTML templates: Update all page titles and headings (login, register, library, search interfaces)
- Docker configuration: Update Dockerfile, docker-compose.yml, nginx.conf with new branding
- CI/CD: Update GitHub Actions workflow name and Docker image names
- Documentation: Update all README files and AI setup instructions
- Enhanced AI modules: Update file headers and comments
- Test files: Update test class names and descriptions
- Configuration files: Update .dockerignore and requirements comments

Complete rebranding maintaining all functionality while updating user-facing names from VaultIQ to AskMyVideo.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+# AskMyVideo Web Application
+# Full-stack video processing and AI search platform
+version: '3.8'
+
 services:
   # VaultIQ Web Application
   web:
