--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {
 }
 
 http {
-    upstream vaultiq {
+    upstream askmyvideo {
         server web:8000;
     }
 
@@ -28,7 +28,7 @@ http {
 
         # Main application
         location / {
-            proxy_pass http://vaultiq;
+            proxy_pass http://askmyvideo;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
