--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,14 @@
-name: VaultIQ CI Pipeline
+name: AskMyVideo CI Pipeline
 
 on:
   push:
-    branches: [ main, develop, feature/* ]
-  pull_request:
     branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: askmyvideo
 
 jobs:
   test:
@@ -112,15 +116,15 @@ jobs:
     
     - name: Build Docker image
       run: |
-        docker build -t vaultiq:${{ github.sha }} .
+        docker build -t ${REGISTRY}/${IMAGE_NAME}:${{ github.sha }} .
     
     - name: Test Docker image
       run: |
-        docker run --rm --name vaultiq-test -d \
+        docker run --rm --name ${IMAGE_NAME}-test -d \
           -e DJANGO_SECRET_KEY="test-secret-key" \
           -e DEBUG=False \
           -p 8000:8000 \
-          vaultiq:${{ github.sha }}
+          ${REGISTRY}/${IMAGE_NAME}:${{ github.sha }}
         
         # Wait for container to start
         sleep 15
@@ -129,7 +133,7 @@ jobs:
         curl -f http://localhost:8000/health/ || exit 1
         
         # Stop container
-        docker stop vaultiq-test
+        docker stop ${IMAGE_NAME}-test
     
     - name: Test Docker Compose
       run: |
@@ -138,7 +142,7 @@ jobs:
         version: '3.8'
         services:
           web:
-            image: vaultiq:${{ github.sha }}
+            image: ${REGISTRY}/${IMAGE_NAME}:${{ github.sha }}
             ports:
               - "8000:8000"
             environment:
